--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<body>
+    <nav class="top-navigation">
+        <div class="content"></div>
+    </nav>
 </body>
 </html>
