--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
 <body>
 	<body>
     <nav class="top-navigation">
-        <div class="content"></div>
-    </nav>
+    <div class="content">
+        <ul class="links">
+            <li class="active">Meet Karma</li>
+            <li>How it Works</li>
+            <li>Store</li>
+            <li>Blog</li>
+            <li>Help</li>
+            <li>Login</li>
+        </ul>
+        <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+    </div>
+</nav>
+
+<section class="introduction">
+
+	<section class="content">
+		
+		<h1>Introducing Karma</h1>
+		<h3>Bring WiFi with you, everywhere you go.</h3>
+		<button class="big-button">Learn More</button>
+	</section>
+
+</section>
+    
+</div>
 </body>
 </html>
