--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<body>
-    <nav class="top-navigation">
+<nav class="top-navigation">
     <div class="content">
         <ul class="links">
             <li class="active">Meet Karma</li>
@@ -20,18 +19,39 @@
         <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
     </div>
 </nav>
-
 <section class="introduction">
-
-	<section class="content">
-		
-		<h1>Introducing Karma</h1>
-		<h3>Bring WiFi with you, everywhere you go.</h3>
-		<button class="big-button">Learn More</button>
-	</section>
-
+        <div class="content">
+            <h1>Introducing Karma</h1>
+            <h3>Bring WiFi with you, everywhere you go.</h3>
+            <div class="buttons">
+                <button>Learn More</button>
+            </div>
+        </div>
 </section>
-    
-</div>
+<section class="cases">
+	<div class="content">
+	    <h2>Everyone needs a little Karma.</h2>
+	    <ul class="devices">
+	        <li>
+	            <img width="127px" height="127px" src="images/icon-devices.svg" alt="Internet for all devices image">
+	            <div class="caption">
+	                <h3>Internet for all devices</h3>
+	            </div>
+	        </li>
+	        <li>
+	            <img width="127px" height="127px" src="images/icon-coffee.svg" alt="Boost your productivity image">
+	            <div class="caption">
+	                <h3>Boost your productivity</h3>
+	            </div>
+	        </li>
+	        <li>
+	            <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
+	            <div class="caption">
+	                <h3>Pay as You Go</h3>
+	            </div>
+	        </li>
+	    </ul>
+	</div>
+</section>
 </body>
 </html>
