--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     </div>
 </nav>
 <section class="introduction">
-        <div class="content">
-            <h1>Introducing Karma</h1>
-            <h3>Bring WiFi with you, everywhere you go.</h3>
-            <div class="buttons">
-                <button>Learn More</button>
-            </div>
-        </div>
+    <div class="content">
+        <h1>Introducing Karma</h1>
+        <h3>Bring WiFi with you, everywhere you go.</h3>
+        <button class="big-button">Learn More</button>
+    </div>
 </section>
 <section class="cases">
 	<div class="content">
