--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <li>Help</li>
             <li>Login</li>
         </ul>
-        <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+        <img class="logo" src="images/karma-logo.svg" width="24px">
     </div>
 </nav>
 <section class="introduction">
     <div class="content">
         <h1>Introducing Karma</h1>
         <h3>Bring WiFi with you, everywhere you go.</h3>
-        <button class="big-button">Learn More</button>
+        	<button class="big-button">Learn More</button>
     </div>
 </section>
 <section class="cases">
@@ -31,19 +31,19 @@
 	    <h2>Everyone needs a little Karma.</h2>
 	    <ul class="devices">
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-devices.svg" alt="Internet for all devices image">
+	            <img width="127px" height="127px" src="images/icon-devices.svg">
 	            <div class="caption">
 	                <h3>Internet for all devices</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-coffee.svg" alt="Boost your productivity image">
+	            <img width="127px" height="127px" src="images/icon-coffee.svg">
 	            <div class="caption">
 	                <h3>Boost your productivity</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
+	            <img width="127px" height="127px" src="images/icon-refill.svg">
 	            <div class="caption">
 	                <h3>Pay as You Go</h3>
 	            </div>
@@ -51,5 +51,26 @@
 	    </ul>
 	</div>
 </section>
+<footer class="footer">
+        <div class="content">
+            
+            <hr>
+            <h5>Join us on</h5>
+            <ul class="icons">
+                <li class="twitter">
+                    <i class="twitter"></i>
+                </li>
+                <li class="facebook">
+                    <i class="facebook"></i>
+                </li>
+                <li class="instagram">
+                    <i class="instagram"></i>
+                </li>
+            </ul>
+            <span class="copyright">
+                Copyright
+            </span>
+        </div>
+    </footer>
 </body>
 </html>
