--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 	    <h2>Everyone needs a little Karma.</h2>
 	    <ul class="devices">
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-devices.svg">
+	            <img width="115px" height="115px" src="images/icon-devices.svg">
 	            <div class="caption">
 	                <h3>Internet for all devices</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-coffee.svg">
+	            <img width="115px" height="115px" src="images/icon-coffee.svg">
 	            <div class="caption">
 	                <h3>Boost your productivity</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="127px" height="127px" src="images/icon-refill.svg">
+	            <img width="115px" height="115px" src="images/icon-refill.svg">
 	            <div class="caption">
 	                <h3>Pay as You Go</h3>
 	            </div>
@@ -55,7 +55,7 @@
         <div class="content">
             
             <hr>
-            <h5>Join us on</h5>
+            <h5>Join us</h5>
             <ul class="icons">
                 <li class="twitter">
                     <i class="twitter"></i>
