--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Landing Page</title>
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
+
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
+
 </head>
 <body>
 <nav class="top-navigation">
@@ -16,14 +22,14 @@
             <li>Help</li>
             <li>Login</li>
         </ul>
-        <img class="logo" src="images/karma-logo.svg" width="24px">
+        <img class="logo" src="../images/karma-logo.svg" width="24px">
     </div>
 </nav>
 <section class="introduction">
     <div class="content">
         <h1>Introducing Karma</h1>
         <h3>Bring WiFi with you, everywhere you go.</h3>
-        	<button class="big-button">Learn More</button>
+        <button class="big-button">Learn More</button>
     </div>
 </section>
 <section class="cases">
@@ -31,19 +37,19 @@
 	    <h2>Everyone needs a little Karma.</h2>
 	    <ul class="devices">
 	        <li>
-	            <img width="115px" height="115px" src="images/icon-devices.svg">
+	            <img width="115px" height="115px" src="../images/icon-devices.svg">
 	            <div class="caption">
 	                <h3>Internet for all devices</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="115px" height="115px" src="images/icon-coffee.svg">
+	            <img width="115px" height="115px" src="../images/icon-coffee.svg">
 	            <div class="caption">
 	                <h3>Boost your productivity</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="115px" height="115px" src="images/icon-refill.svg">
+	            <img width="115px" height="115px" src="../images/icon-refill.svg">
 	            <div class="caption">
 	                <h3>Pay as You Go</h3>
 	            </div>
@@ -52,24 +58,22 @@
 	</div>
 </section>
 <footer class="footer">
-        <div class="content">
+        <div class="content social">
             
             <hr>
             <h5>Join us</h5>
             <ul class="icons">
-                <li class="twitter">
-                    <i class="twitter"></i>
-                </li>
-                <li class="facebook">
-                    <i class="facebook"></i>
-                </li>
-                <li class="instagram">
-                    <i class="instagram"></i>
-                </li>
-            </ul>
-            <span class="copyright">
-                Copyright
-            </span>
+            <li>
+                <i class="fa fa-twitter twitter"></i>
+            </li>
+            <li>
+                <i class="fa fa-facebook facebook"></i>
+            </li>
+            <li>
+                <i class="fa fa-instagram instagram"></i>
+            </li>
+        </ul>
+            <span class="copyright">&copy; 2015</span>
         </div>
     </footer>
 </body>
