--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Help</li>
             <li>Login</li>
         </ul>
-        <img class="logo" src="../images/karma-logo.svg" width="24px">
+        <img class="logo" src="/images/karma-logo.svg" width="24px">
     </div>
 </nav>
 <section class="introduction">
@@ -37,19 +37,19 @@
 	    <h2>Everyone needs a little Karma.</h2>
 	    <ul class="devices">
 	        <li>
-	            <img width="115px" height="115px" src="../images/icon-devices.svg">
+	            <img width="115px" height="115px" src="/images/icon-devices.svg">
 	            <div class="caption">
 	                <h3>Internet for all devices</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="115px" height="115px" src="../images/icon-coffee.svg">
+	            <img width="115px" height="115px" src="/images/icon-coffee.svg">
 	            <div class="caption">
 	                <h3>Boost your productivity</h3>
 	            </div>
 	        </li>
 	        <li>
-	            <img width="115px" height="115px" src="../images/icon-refill.svg">
+	            <img width="115px" height="115px" src="/images/icon-refill.svg">
 	            <div class="caption">
 	                <h3>Pay as You Go</h3>
 	            </div>
