--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 
-	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 
 </head>
 <body>
